@@ -27,5 +27,16 @@ kotlin {
 }
 
 tasks.withType<Test>().configureEach {
-   jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED", "--add-opens=java.base/java.lang=ALL-UNNAMED")
+   jvmArgumentProviders.add(CommandLineArgumentProvider {
+      val javaLauncher = javaLauncher.orNull
+      buildList {
+         if (javaLauncher != null && javaLauncher.metadata.languageVersion >= JavaLanguageVersion.of(9)) {
+            // --add-opens is only available in Java 9+
+            add("--add-opens=java.base/java.util=ALL-UNNAMED")
+            add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+            // have to manually allow security.manager in Java 9+ https://github.com/kotest/kotest/issues/3841
+            add("-Djava.security.manager=allow")
+         }
+      }
+   })
 }
